v3.11.1 (XXXX-XX-XX)
--------------------

* Add a startup parameter `--rclone.argument` which can be utilised to enable
  debugging with logfiles in hot backup RClone upload operacions:
  `--rclone.argument=--log-level=DEBUG`
  `--rclone.argument=-log-file=/tmp/rclone.log`

* Fix issue #18982: query editor null/undefined check filters out bindParams
  with value 0.


v3.11.0 (2023-05-23)
--------------------

* Convert v3.11.0-rc.2 into v3.11.0.

* SEARCH-477: stabilize ArangoSearch (stage of BTS-1416).


v3.11.0-rc.2 (2023-05-17)
-------------------------

* Internal bug-fixes and stabilization improvements.


v3.11.0-rc.1 (2023-05-13)
-------------------------

* Fixed BTS-1398: GEO_DISTANCE() for ArangoSearch geo_s2 analyzer.

* Improved error reporting for system calls on Windows and fixed a
  Windows-specific issue of the IOHeartbeatThread.

* FE-256: Minor Graph Viewer improvements:
  - re-order right click menu
  - Make Right click menu and toolbar work in full screen
  - Remove editable attributes in edit and delete (nodes and edges) modals
  - Add "tree"-mode to editor in edit (nodes and edges) modals

* FE-266: Use the method 'fromGeoJson()' instead of 'geometry.coordinates'
  for GeoJSON.

* Fixed issue #18942: arangorestore ignores the HTTP status code.

* FE-267: fix custom analyzer & features not showing up in inverted index view,
  and support for basic fields definition.

* FE-265: Fix user permissions radio button shadow.

* FE-268: remove 'switch to new graph' when no defined graph is present.

* FE-258: allow specifying optimizeTopK during arangosearch view creation.

* FE-257: allow additional properties in inverted index creation.

* UI Fix - allow empty keys in document key validation.

* BTS-1181: fix a data race on the collection list in TransactionState.
  This race could happen in the cluster when a collection is sharded by a
  different attribute than `_key` and a document lookup by _key is performed.