@@ -117,12 +117,10 @@ class Cursor {
   uint64_t storedBatchId() const { return _currentBatchResult.first; }
 
   void handleNextBatchIdValue(VPackBuilder& builder, bool hasMore) {
-    if (isRetriable()) {
-      _currentBatchResult.first = ++_currentBatchId;
-      if (hasMore) {
-        builder.add("nextBatchId", std::to_string(_currentBatchId + 1));
-        _lastAvailableBatchId = _currentBatchId + 1;
-      }
+    _currentBatchResult.first = ++_currentBatchId;
+    if (hasMore) {
+      builder.add("nextBatchId", std::to_string(_currentBatchId + 1));
+      _lastAvailableBatchId = _currentBatchId + 1;
     }
   }
 
