@@ -29,14 +29,15 @@
 // / @author Copyright 2012-2013, triAGENS GmbH, Cologne, Germany
 // //////////////////////////////////////////////////////////////////////////////
 
-var internal = require('internal');
-var arangosh = require('@arangodb/arangosh');
+const internal = require('internal');
+const arangosh = require('@arangodb/arangosh');
+const errors = internal.errors;
 
 // //////////////////////////////////////////////////////////////////////////////
 // / @brief constructor
 // //////////////////////////////////////////////////////////////////////////////
 
-function ArangoQueryCursor(database, data, stream) {
+function ArangoQueryCursor(database, data, stream, retriable) {
   this._database = database;
   this._dbName = database._name();
   this.data = data;
@@ -47,11 +48,7 @@ function ArangoQueryCursor(database, data, stream) {
   this._total = 0;
   this._stream = stream || false;
   this._cached = false;
-  this._retriable = false;
-
-  if (data.hasOwnProperty('nextBatchId')) {
-    this._retriable = true;
-  }
+  this._retriable = retriable || false;
 
   if (data.result !== undefined) {
     this._count = data.result.length;
@@ -212,7 +209,7 @@ ArangoQueryCursor.prototype.next = function () {
   }
   const latestBatchId = this.data.nextBatchId;
 
-  var result = this.data.result[this._pos];
+  let result = this.data.result[this._pos];
   this._pos++;
 
   // reached last result
@@ -224,20 +221,35 @@ ArangoQueryCursor.prototype.next = function () {
       this._hasMore = false;
 
       // load more results
-      var requestResult = this._database._connection.POST(this._baseurl(), null);
-
-
-      try {
-        arangosh.checkRequestResult(requestResult);
-      } catch (err) {
-        if (latestBatchId !== undefined) {
-          requestResult = this._database._connection.POST(this._baseurl() + '/' + encodeURIComponent(latestBatchId), null);
-          arangosh.checkRequestResult(requestResult);
+      // in case we have the latestBatchId and the cursor is retriable, try up to 3 times.
+      // otherwise, try only once
+      let tries = (!this._retriable || latestBatchId === undefined ? 1 : 3);
+      let requestResult;
+      do {
+        if (latestBatchId === undefined) {
+          requestResult = this._database._connection.POST(this._baseurl(), null);
         } else {
-          // throw the error again for the case in which the request to the latest batch is not retryable
-          throw err;
+          requestResult = this._database._connection.POST(this._baseurl() + '/' + encodeURIComponent(latestBatchId), null);
         }
-      }
+
+        try {
+          arangosh.checkRequestResult(requestResult);
+          // success
+          break;
+        } catch (err) {
+          if (err.errorNum === errors.ERROR_QUERY_KILLED.code ||
+              err.errorNum === errors.ERROR_CURSOR_NOT_FOUND.code || 
+              err.errorNum === errors.ERROR_CURSOR_BUSY.code) {
+            // in these cases, a retry is useless
+            throw err;
+          }
+          if (--tries === 0) {
+            // no (more) retries
+            throw err;
+          }
+          // try again
+        }
+      } while (true);
 
       let oldId; // undefined
       if (this._retriable && this.data.id !== undefined) {
