@@ -1,6 +1,13 @@
 v3.11.1 (XXXX-XX-XX)
 --------------------
 
+* In batched query results, when executing requests for
+  `/_api/cursor/<cursorId>/<batchId>`, removed the restriction that the user
+  would only be able to fetch the next batch using the next batch id in
+  <batchId> if the query option `allowRetry` was set to true, but maintained the
+  restriction that the user can only retrieve the latest batch if the query
+  option `allowRetry` is set to true.
+
 * Add a startup parameter `--rclone.argument` which can be utilised to enable
   debugging with logfiles in hot backup RClone upload operacions:
   `--rclone.argument=--log-level=DEBUG`
